--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -45,6 +45,7 @@ jobs:
         uses: actions/upload-pages-artifact@v3
         with:
           path: build
+          name: github-pages-${{ github.run_id }}
 
   deploy:
     environment:
@@ -56,3 +57,5 @@ jobs:
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
+        with:
+          artifact_name: github-pages-${{ github.run_id }}
